--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Recursive:wght@300;400;500;600;700;800;900;1000&family=Righteous&display=swap');
 /*.screen-container{
   background-color: #FB6B6B;
   width: 100vw;
@@ -79,7 +81,7 @@
   border: 1px solid blue;
   padding:5px;
 }
-*/
+
 .pergunta-fechada {
   width: 300px;
   height: 35px;
@@ -100,7 +102,7 @@
   font-size: 16px;
   line-height: 19px;
   color: #333333;
-}
+}*/
 
 .pergunta-aberta {
   width: 300px;
